// To generate protobuf codes:-
// protoc -Isum-api/proto --go_out=. --go_opt=module=github.com/sayeed1999/grpc-go-course --go-grpc_out=. --go-grpc_opt=module=github.com/sayeed1999/grpc-go-course sum-api/proto/sum.proto

syntax = "proto3";

package sum;

option go_package = "github.com/sayeed1999/grpc-go-course";

message SumRequest {
    int32 param1 = 1;
    int32 param2 = 2;
}

message SumResponse {
    int32 result = 1;
}

service SumService {
    rpc Add (SumRequest) returns (SumResponse);
}